// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedArticleSlice error checks empty slice 1`] = `<DocumentFragment />`;

exports[`RelatedArticleSlice error checks invalid slicename 1`] = `<DocumentFragment />`;

exports[`RelatedArticleSlice renders 1 1`] = `
<DocumentFragment>
  <div
    class="RelatedArticleSlice sc-dVhcbM kTrWhD"
  >
    <div
      class="heading"
    >
      Related Articles
    </div>
    <div
      class="sc-gqjmRU sc-fBuWsC cpkUFc"
    >
      <div
        class="sc-VigVT sc-fMiknA gRJFLd"
      >
        <article
          class="sc-bZQynM iuNhVy"
        >
          <div
            class="sc-gzVnrw hheJxB"
          >
            <div
              class="sc-bxivhb dRsrVH"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <div
                  class="sc-ifAKCX bsfsxb"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3744%2C0%2C0&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gzVnrw hheJxB"
          >
            <p
              class="sc-htoDjs dkiinb"
            >
              Comment
            </p>
            <div
              class="sc-EHOje kuKfbn"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <h3>
                  How Gymshark recruits the best young people
                </h3>
              </a>
            </div>
            <p
              class="sc-dnqmqq duPlil"
            >
              The average age of my colleagues at Gymshark was 26 when we had 260 staff in 2018. It is now 29, but we have almost tripled in size. Half our management team is younger than 30, including our founder Ben, who set up the
            </p>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RelatedArticleSlice renders 2 1`] = `
<DocumentFragment>
  <div
    class="RelatedArticleSlice sc-dVhcbM kTrWhD"
  >
    <div
      class="heading"
    >
      Related Articles
    </div>
    <div
      class="sc-gqjmRU fHAJuF"
    >
      <div
        class="sc-VigVT sc-kkGfuU ihRFdb"
      >
        <article
          class="sc-bZQynM eYJhYp"
        >
          <div
            class="sc-gzVnrw SrZuv"
          >
            <div
              class="sc-bxivhb fdEgwX"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <div
                  class="sc-ifAKCX kYdlTY"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3744%2C0%2C0&resize=80"
                    />
                  </div>
                </div>
                <div
                  class="sc-ifAKCX jeHWTF"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3159%2C0%2C293&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gzVnrw SrZuv"
          >
            <p
              class="sc-htoDjs dkiinb"
            >
              Comment
            </p>
            <div
              class="sc-EHOje cjGuRy"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <h3>
                  How Gymshark recruits the best young people
                </h3>
              </a>
            </div>
          </div>
        </article>
      </div>
      <div
        class="sc-VigVT sc-kkGfuU ihRFdb"
      >
        <article
          class="sc-bZQynM eYJhYp"
        >
          <div
            class="sc-gzVnrw SrZuv"
          >
            <div
              class="sc-bxivhb fdEgwX"
            >
              <a
                href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
              >
                <div
                  class="sc-ifAKCX kYdlTY"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fcbfae118-aef3-11eb-9dc9-5a05c2885d62.jpg?crop=4126%2C2750%2C14%2C1764&resize=80"
                    />
                  </div>
                </div>
                <div
                  class="sc-ifAKCX jeHWTF"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fcbfae118-aef3-11eb-9dc9-5a05c2885d62.jpg?crop=4105%2C2309%2C42%2C1828&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gzVnrw SrZuv"
          >
            <div
              class="sc-EHOje cjGuRy"
            >
              <a
                href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
              >
                <h3>
                  Susie Ma: My recipe for self-belief
                </h3>
              </a>
            </div>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RelatedArticleSlice renders 3 1`] = `
<DocumentFragment>
  <div
    class="RelatedArticleSlice sc-dVhcbM kTrWhD"
  >
    <div
      class="heading"
    >
      Related Articles
    </div>
    <div
      class="sc-gqjmRU sc-kpOJdX dnCycN"
    >
      <div
        class="sc-VigVT sc-dxgOiQ cMoArW"
      >
        <article
          class="sc-bZQynM eYJhYp"
        >
          <div
            class="sc-gzVnrw SrZuv"
          >
            <div
              class="sc-bxivhb fdEgwX"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <div
                  class="sc-ifAKCX kYdlTY"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3744%2C0%2C0&resize=80"
                    />
                  </div>
                </div>
                <div
                  class="sc-ifAKCX jeHWTF"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3159%2C0%2C293&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gzVnrw SrZuv"
          >
            <p
              class="sc-htoDjs dkiinb"
            >
              Comment
            </p>
            <div
              class="sc-EHOje kuKfbn"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <h3>
                  How Gymshark recruits the best young people
                </h3>
              </a>
            </div>
          </div>
        </article>
      </div>
      <div
        class="sc-VigVT sc-ckVGcZ eqRVg"
      >
        <div
          class="sc-VigVT hquidN"
        >
          <article
            class="sc-bZQynM eYJhYp"
          >
            <div
              class="sc-gzVnrw SrZuv"
            >
              <div
                class="sc-bxivhb fdEgwX"
              >
                <a
                  href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
                >
                  <div
                    class="sc-ifAKCX bsfsxb"
                  >
                    <div
                      class="sc-bdVaJa fdpJDB"
                    >
                      <img
                        alt=""
                        src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fcbfae118-aef3-11eb-9dc9-5a05c2885d62.jpg?crop=4126%2C2750%2C14%2C1764&resize=80"
                      />
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="sc-gzVnrw SrZuv"
            >
              <div
                class="sc-EHOje fcDUnY"
              >
                <a
                  href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
                >
                  <h3>
                    Susie Ma: My recipe for self-belief
                  </h3>
                </a>
              </div>
            </div>
          </article>
        </div>
        <article
          class="sc-bZQynM echkIr"
        >
          <div
            class="sc-gzVnrw exwLiI"
          >
            <div
              class="sc-bxivhb jiOiDG"
            >
              <a
                href="https://www.thetimes.co.uk/article/why-business-is-eating-software-swl6j8jj3"
              >
                <div
                  class="sc-ifAKCX bsfsxb"
                >
                  <div
                    class="sc-bdVaJa fdpJDB"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd67cb358-cce1-11eb-9bfa-a3bc386e6928.jpg?crop=1175%2C784%2C277%2C106&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gzVnrw exwLiI"
          >
            <div
              class="sc-EHOje idzahT"
            >
              <a
                href="https://www.thetimes.co.uk/article/why-business-is-eating-software-swl6j8jj3"
              >
                <h3>
                  Why business is eating software
                </h3>
              </a>
            </div>
            <p
              class="sc-iwsKbI bjTJyE"
            >
              3 days ago
            </p>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
